@@ -21,7 +21,7 @@
   <font size="4"><a href="http://www.unrealircd.com">http://www.unrealircd.com</a></font><br>
   <font size="4">Version: 3.2</font><br>
   <b>Current Version:</b> 3.2 Beta19-CVS<br>
-  <b>Last doc update:</b> 2004-01-28</div>
+  <b>Last doc update:</b> 2004-01-29</div>
   <b>Head Coders:</b> Stskeeps / codemastr / Syzop / Luke / McSkaf<br>
   <b>Contributors:</b> Zogg / NiQuiL / assyrian / chasm / DrBin / llthangel / Griever / nighthawk<br>
   <b>Documentation:</b> CKnight^ / Syzop<br>
@@ -2844,6 +2844,7 @@ to get more information on a command.</p>
 	D - denylinkall - Send the deny link (all) block list<br>
 	e - exceptthrottle - Send the except trottle block list<br>
 	E - exceptban - Send the except ban block list<br>
+	f - spamfilter - Send the spamfilter list<br>
 	F - denydcc - Send the deny dcc block list<br>
 	G - gline - Send the gline list<br>
 	&nbsp;&nbsp;Extended flags: [+/-mrs] [mask] [reason] [setby]<br>
